wk_taa_taaqa/src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Account_Attribute_Has_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Attribute Has Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Attribute__c</fullName>
        <label>Account Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Has Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the promotion is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_For_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This promo can be applied to each product on the quote that is in this product group.</description>
        <inlineHelpText>This promo can be applied to each product on the quote that is in this product group.</inlineHelpText>
        <label>Product Group Discounted</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COMPL3_PTE_Core_TPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COMPL3: PTE &amp; Core TPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date from which this promotion becomes effective</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Criteria_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>At least one product in this group must be on the quote. Only then will the quote be eligible for this promo.</description>
        <inlineHelpText>At least one product in this group must be on the quote. Only then will the quote be eligible for this promo.</inlineHelpText>
        <label>Eligibility Criteria Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Promotions (Eligibility Criteria Product Group)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entities_to_Match__c</fullName>
        <inlineHelpText>Specifies whether to match Account Attributes or Products or both</inlineHelpText>
        <label>Entities to Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Only</fullName>
                </value>
                <value>
                    <fullName>Account Only</fullName>
                </value>
                <value>
                    <fullName>Product or Account</fullName>
                </value>
                <value>
                    <fullName>Product and Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date after which this promotion ceases to be effective</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId_P__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId_P</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasPROS4_Standard_FED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasPROS4: Standard FED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_COMPL1_Master_Tax_Guide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has COMPL1: Master Tax Guide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_COMPL2_PTE_Single_TPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has COMPL2: PTE &amp; Single TPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CORPC_MTG_PTP_3_Full_or_5_Lite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CORPC: MTG + PTP + 3 Full or 5 Lite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CORPP_MTG_TRC_50_States_Lite_F__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CORPP: MTG + TRC + 50 States Lite +F</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CORPS1_MTG_FED_TRC_50_States__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CORPS1: MTG + FED +TRC + 50 States</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CORPS2_MTG_FED_TRC_All_States__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CORPS2: MTG + FED +TRC + All States</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROP1_PTP_Core_TPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROP1: PTP &amp; Core TPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROS6_FED_Federal_TPP_1_Full__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROS6: FED, Federal TPP &amp; 1 Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROT2_TRC_Lite_Core_TPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROT2: TRC Lite &amp; Core TPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROT3_TRC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROT3: TRC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROT5_TRC_Federal_TPP_1_Full__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROT5: TRC, Federal TPP &amp; 1 Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_TAX0_TRC_and_FED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has TAX0: TRC and FED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_TAX1_TRC_FED_Federal_TPP_1_Fu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has TAX1: TRC, FED, Federal TPP, 1 Fu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_TAX2A_TRC_FED_Federal_TPP_1_F__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has TAX2A: TRC, FED, Federal TPP, 1 F</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Max_Products__c</fullName>
        <description>Maximum number of products to match from the Eligibility Criteria Product Group.</description>
        <inlineHelpText>Maximum number of products to match from the Eligibility Criteria Product Group.</inlineHelpText>
        <label>Match Max Products</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Min_Products__c</fullName>
        <description>Minimum number of products to match from the Eligibility Criteria Product Group.</description>
        <inlineHelpText>Minimum number of products to match from the Eligibility Criteria Product Group.</inlineHelpText>
        <label>Match Min Products</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Rule_Product_Eligibility_Group__c</fullName>
        <description>Quote one or more products in this group before client can be eligible for this promo.</description>
        <inlineHelpText>Quote one or more products in this group before client can be eligible for this promo.</inlineHelpText>
        <label>Match Rule Product Eligibility Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match Any in Group</fullName>
                </value>
                <value>
                    <fullName>Match All in Group</fullName>
                </value>
                <value>
                    <fullName>Min/Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New to New</fullName>
                </value>
                <value>
                    <fullName>New to Existing</fullName>
                </value>
                <value>
                    <fullName>Non-Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Terms_for_Order_Form__c</fullName>
        <label>Promotion Terms for Order Form</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X5_Digit_Promo_Code_del__c</fullName>
        <formula>LEFT(Promo_Code__c,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Digit Promo Code</label>
        <type>Text</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Promo_Code__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>Price_List__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>